--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.DAMA" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Base.Theme.DAMA" parent="Theme.Material3.DayNight.NoActionBar">
+
+    </style>
+
+    <style name="Theme.DAMA" parent="Base.Theme.DAMA" />
 </resources>
