--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,11 +31,23 @@
         android:layout_height="wrap_content"
         android:text="Get Positions" />
 
+    <Button
+        android:id="@+id/getWiki"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Wiki" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/text2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
 
 </LinearLayout>
