--- a/app/src/main/res/drawable/ic_back.xml
+++ b/app/src/main/res/drawable/ic_back.xml
@@ -1,7 +1,18 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/white"/>
-    <corners android:radius="20dp"/>
-    <stroke
-        android:width="1dp"
-        android:color="@color/textColorSecondary"/>
-</shape>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <!-- Circle -->
+    <path
+        android:strokeColor="#000000"
+        android:strokeWidth="0.25"
+        android:pathData="M12,2A10,10 0,1 1,2 12,10,10 0,0 1,12 2z" />
+    <!-- Arrow pointing to left -->
+    <path
+        android:strokeColor="#000000"
+        android:strokeWidth="1"
+        android:pathData="M14,7L9,12L15,17"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
+</vector>
