--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
     </LinearLayout>
 
     <!-- Skip TextView -->
-    <TextView
+    <Button
         android:id="@+id/skip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -98,6 +98,7 @@
         android:layout_marginTop="24dp"
         android:text="@string/skip"
         android:textColor="@color/primaryColor"
+        android:background="@android:color/transparent"
         android:clickable="true"
         android:focusable="true" />
 
