--- a/app/src/main/res/layout/activity_ar.xml
+++ b/app/src/main/res/layout/activity_ar.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context="ui.views.ArActivity">
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment"
+        android:name="com.google.ar.sceneform.ux.ArFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
