--- a/app/src/main/res/layout/empty_activity.xml
+++ b/app/src/main/res/layout/empty_activity.xml
@@ -12,4 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:background="@drawable/rounded_background" />
+
+    <!-- Logout Button -->
+    <Button
+        android:id="@+id/logout_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/top_background"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:text="Logout"
+        android:background="@drawable/button_border" />
 </RelativeLayout>
