AR view improvements

--- a/app/src/main/res/layout/activity_ar.xml
+++ b/app/src/main/res/layout/activity_ar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,8 +11,46 @@
         android:id="@+id/fragment"
         android:name="com.google.ar.sceneform.ux.ArFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/rounded_corners"
+        android:layout_marginEnd="5dp"
+        android:layout_marginTop="5dp"
+        android:padding="5dp">
+
+        <ImageButton
+            android:id="@+id/refreshButton"
+            android:contentDescription="Refresh"
+            android:src="@drawable/refresh_icon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/listButton"
+            style="@style/imgButtonAR" />
+
+        <ImageButton
+            android:id="@+id/listButton"
+            android:contentDescription="List"
+            android:src="@drawable/list_icon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/refreshButton"
+            app:layout_constraintBottom_toTopOf="@id/logoutButton"
+            style="@style/imgButtonAR"/>
+
+        <ImageButton
+            android:id="@+id/logoutButton"
+            android:contentDescription="List"
+            android:src="@drawable/logout_icon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/listButton"
+            app:layout_constraintBottom_toBottomOf="parent"
+            style="@style/imgButtonAR"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
