--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="background_color">#FFFFFF</color>
+    <color name="background_color_withTransparency">#60FFFFFF</color>
     <color name="primaryColor">#6200EE</color>
     <color name="textColorPrimary">#000000</color>
     <color name="textColorSecondary">#757575</color>
