--- a/app/src/main/res/layout/info_panel.xml
+++ b/app/src/main/res/layout/info_panel.xml
@@ -1,21 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:background="@color/background_color_withTransparency">
 
     <TextView
         android:id="@+id/planetName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Informação"
-        android:textSize="14sp"
-        android:textColor="@android:color/black" />
+        android:textSize="40sp"
+        android:textColor="@color/textColorPrimary"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/planetButton"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-    <Button
+    <ImageView
         android:id="@+id/planetButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="More info" />
-</LinearLayout>
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/moreinfo_icon"
+        android:background="@android:color/transparent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/planetName"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
