--- a/app/src/main/res/layout/activity_celestial.xml
+++ b/app/src/main/res/layout/activity_celestial.xml
@@ -27,7 +27,7 @@
             android:layout_marginTop="60dp" />
 
         <!-- Back Button -->
-        <ImageView
+        <ImageButton
             android:id="@+id/back_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,7 +37,8 @@
             android:contentDescription="@string/back_button"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            app:tint="@android:color/white" />
+            app:tint="@android:color/white"
+            style="@style/imgButtonAR"/>
 
         <!-- LinearLayout for Content -->
         <LinearLayout
