--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -121,13 +121,14 @@
     </LinearLayout>
 
     <!-- Skip TextView -->
-    <TextView
+    <Button
         android:id="@+id/skip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="24dp"
+        android:background="@drawable/button_border"
         android:text="@string/skip"
         android:textColor="@color/primaryColor"
         android:clickable="true"
