Fix Bugs and logo addition

--- a/app/src/main/res/layout/activity_aboutus.xml
+++ b/app/src/main/res/layout/activity_aboutus.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/midGrey"
-    tools:context=".ui.views.CelestialActivity">
+    tools:context=".ui.views.AboutUsActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
