--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="50dp"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_launcher_foreground"
+        android:src="@drawable/app_logo"
         android:contentDescription="@string/app_logo" />
 
     <!-- LinearLayout for Login Form -->
