Fix Bugs and extract strings

--- a/app/src/main/res/layout/activity_aboutus.xml
+++ b/app/src/main/res/layout/activity_aboutus.xml
@@ -24,7 +24,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="60dp"
-            android:contentDescription="IPT Logo"
+            android:contentDescription="@string/ipt_logo"
             android:src="@drawable/ipt_logo"/>
 
         <!-- Back Button -->
