--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -9,7 +9,7 @@
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Astronomical Objects List"
+        android:text="@string/astronomical_objects_list"
         android:gravity="center"
         android:textSize="24sp"
         android:background="@drawable/rounded_corners_primary"
@@ -30,7 +30,7 @@
             android:id="@+id/arButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="AR View"
+            android:text="@string/ar_view"
             android:backgroundTint="@color/primaryColor"
             android:background="@drawable/rounded_corners_primary"
             android:textColor="@color/white"
@@ -47,7 +47,7 @@
             android:id="@+id/logoutButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Logout"
+            android:text="@string/logout"
             android:backgroundTint="@color/primaryColor"
             android:background="@drawable/rounded_corners_primary"
             android:textColor="@color/white"
