--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -68,6 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:autofillHints="@string/first_name"
             android:hint="@string/first_name"
             android:inputType="textPersonName"
             android:padding="12dp"
@@ -79,6 +80,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:autofillHints="@string/last_name"
             android:hint="@string/last_name"
             android:inputType="textPersonName"
             android:padding="12dp"
@@ -90,6 +92,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:autofillHints="Email"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:padding="12dp"
@@ -101,6 +104,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:autofillHints="Password"
             android:hint="@string/password"
             android:inputType="textPassword"
             android:padding="12dp"
