--- a/app/src/main/res/layout/info_panel.xml
+++ b/app/src/main/res/layout/info_panel.xml
@@ -11,7 +11,7 @@
         android:id="@+id/planetName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Informação"
+        android:text="@string/informacao"
         android:textSize="40sp"
         android:textColor="@color/textColorPrimary"
         android:layout_marginEnd="10dp"
