--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -26,7 +26,7 @@ app:cardElevation="4dp">
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Task Description"
+        android:text="@string/title"
         android:textColor="#333"
         android:textSize="16sp"/>
 
@@ -34,7 +34,7 @@ app:cardElevation="4dp">
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="More info +"
+        android:text="@string/more_info"
         android:backgroundTint="@color/purple_500"
         android:textColor="@color/white"/>
 
