--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="imgButtonAR">
         <item name="android:layout_width">40dp</item>
         <item name="android:layout_height">40dp</item>
-        <item name="android:background">@android:color/transparent</item>
+        <item name="android:background">@color/primaryColorDark</item>
         <item name="android:elevation">6dp</item>
     </style>
 </resources>
