--- a/app/src/main/res/layout/activity_celestial.xml
+++ b/app/src/main/res/layout/activity_celestial.xml
@@ -36,6 +36,7 @@
             android:src="@drawable/ic_back"
             android:contentDescription="@string/back_button"
             android:background="@android:color/transparent"
+            app:tint="@android:color/white"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             style="@style/imgButtonAR"/>
@@ -78,26 +79,27 @@
                 android:textSize="14sp" />
         </LinearLayout>
 
-        <!-- Constraint Layout containing Image Button -->
+        <!-- Constraint Layout containing Logout Button -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:background="@drawable/rounded_corners"
-            android:padding="5dp"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true">
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="15dp"
+            android:layout_marginTop="15dp"
+            android:padding="5dp">
 
             <ImageButton
                 android:id="@+id/logout_button"
-                style="@style/imgButtonAR"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                app:tint="@android:color/white"
                 android:contentDescription="@string/logout"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:background="@android:color/transparent"
+                android:src="@drawable/logout_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
