--- a/app/src/main/res/layout/activity_aboutus.xml
+++ b/app/src/main/res/layout/activity_aboutus.xml
@@ -36,6 +36,7 @@
             android:layout_marginTop="15dp"
             android:src="@drawable/ic_back"
             android:contentDescription="@string/back_button"
+            android:background="@android:color/transparent"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             app:tint="@android:color/white"
