--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -123,6 +123,7 @@
         android:src="@drawable/logout_icon"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@android:color/transparent"
+        app:tint="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp" />
