--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,16 +14,18 @@
         android:fitsSystemWindows="true">
 
         <!-- Purple Background on top with rounded bottom corners -->
+
+        <!-- Back Button -->
         <View
             android:id="@+id/top_background"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:background="@drawable/rounded_background"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Back Button -->
         <ImageView
             android:id="@+id/back_button"
             android:layout_width="wrap_content"
@@ -39,10 +41,10 @@
         <!-- App Icon -->
         <ImageView
             android:id="@+id/app_logo"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_marginTop="40dp"
-            android:src="@drawable/ic_launcher_foreground"
+            android:src="@drawable/app_logo"
             android:contentDescription="@string/app_logo"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/login_form"
