--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -34,11 +34,11 @@
         <!-- App Icon -->
         <ImageView
             android:id="@+id/app_logo"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="40dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="60dp"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/ic_launcher_foreground"
+            android:src="@drawable/app_logo"
             android:contentDescription="@string/app_logo" />
 
         <!-- LinearLayout for Register Form -->
